Comentados Stage4 y SimulatorConfig